# devspace

./: .gitignore  go.mod  go.sum  main.py  pyproject.toml
.devcontainer/: Dockerfile  README.md
benchmark/: README.md  benchmark.py  docker.sh  docker_build.sh  over_time.py  plots.py  problem_stats.py  refactor_tools.py  rsync.sh  rungrid.py  swe-bench-lite.txt  swe-bench.txt  swe_bench.py  test_benchmark.py
desktop/: package.json
dev/: format  mypy-check  sync-uv  update-uv
devspace/: .env.example  .gitignore  LICENSE  README.md  main.py  mypy.ini  pyproject.toml
devspace/app/: main.py
devspace/app/ai/agents/: base_agent.py
devspace/app/cli/: __init__.py
devspace/app/http/: main.py
devspace/app/http/routes/: __init__.py
devspace/config/: settings.py
devspace/docs/: README.md
devspace_env.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
docker/: Dockerfile  Dockerfile.worker  docker-compose.middleware.yaml  docker-compose.yaml
docker/nginx/conf.d/: default.conf
internal/tailscale/: go.mod  go.sum
