[project]
name = "devspace-env"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "cattrs>=25.1.1",
    "numpy>=2.3.1",
    "protobuf>=6.31.1",
    "pyaml>=25.5.0",
    "sympy>=1.14.0",
    "tqdm>=4.67.1",
]

[tool.uv.workspace]
members = [
    "devspace",
]
